--- a/manuale-struttura-accreditata/gu14.rst
+++ b/manuale-struttura-accreditata/gu14.rst
@@ -1,5 +1,5 @@
-Inserimento istanza di definizione (Modello GU14)
-=================================================
+Inserimento istanza di definizione (Modello GU14 e SMA)
+=======================================================
 
 L'istanza di definizione, nel caso in cui sia presente in ConciliaWeb la conciliazione relativa, dovrà essere inserita andando sulla lista dei procedimenti "I miei procedimenti (conciliazioni/definizioni)", e cliccando sull'apposito pulsante presente nella colonna "Azioni" relativa alla conciliazione conclusa con mancato accordo.
 
